criando uma conexao com try e except

--- a/notebook_documetação/estudo-ETL-f1.ipynb
+++ b/notebook_documetação/estudo-ETL-f1.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,9 @@
     "\n",
     "import pymysql\n",
     "import pandas as pd\n",
-    "import sqlalchemy"
+    "import sqlalchemy\n",
+    "from sqlalchemy import create_engine\n",
+    "from matplotlib import pyplot as plt"
    ]
   },
   {
@@ -64,15 +66,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Base de dados AWS conectada com sucesso!\n"
+     ]
+    }
+   ],
    "source": [
-    "#Sintaxe:\n",
+    "##Sintaxe:\n",
     "#engine = sqlalchemy.create_engine( ‘mysql+drive://usuario:senha@ip-servidor:porta/banco-de-dados‘)\n",
     "\n",
+    "try:\n",
+    "    engine = sqlalchemy.create_engine('mysql+pymysql://admin:mysqladmin1509@database-1.c2hbzw6k9btq.us-east-2.rds.amazonaws.com:3306/FORMULA1')\n",
+    "    print(\"Base de dados AWS conectada com sucesso!\")\n",
     "\n",
-    "engine = sqlalchemy.create_engine('mysql+pymysql://admin:mysqladmin1509@database-1.c2hbzw6k9btq.us-east-2.rds.amazonaws.com:3306/FORMULA1')"
+    "except Exception as err:\n",
+    "\n",
+    "    print(\"Falha na conexão\")\n",
+    "    print(err)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch main\n",
+      "Your branch is up to date with 'origin/main'.\n",
+      "\n",
+      "Changes not staged for commit:\n",
+      "  (use \"git add <file>...\" to update what will be committed)\n",
+      "  (use \"git restore <file>...\" to discard changes in working directory)\n",
+      "\tmodified:   estudo-ETL-f1.ipynb\n",
+      "\n",
+      "Untracked files:\n",
+      "  (use \"git add <file>...\" to include in what will be committed)\n",
+      "\t.ipynb_checkpoints/\n",
+      "\n",
+      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "git add \n"
    ]
   },
   {
