--- a/notebook_documetação/estudo-ETL-f1.ipynb
+++ b/notebook_documetação/estudo-ETL-f1.ipynb
@@ -93,32 +93,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def comitar_enviar(comentario):\n",
+    "    !git add estudo-ETL-f1.ipynb\n",
+    "    !git commit -m comentario\n",
+    "    !git push"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "On branch main\n",
-      "Your branch is up to date with 'origin/main'.\n",
-      "\n",
-      "Changes not staged for commit:\n",
-      "  (use \"git add <file>...\" to update what will be committed)\n",
-      "  (use \"git restore <file>...\" to discard changes in working directory)\n",
-      "\tmodified:   estudo-ETL-f1.ipynb\n",
-      "\n",
-      "Untracked files:\n",
-      "  (use \"git add <file>...\" to include in what will be committed)\n",
-      "\t.ipynb_checkpoints/\n",
-      "\n",
-      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
+      "[main 622b412] criando uma conexao com try e except\n",
+      " 1 file changed, 52 insertions(+), 7 deletions(-)\n"
      ]
     }
    ],
-   "source": [
-    "git add \n"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/iuryeng/formula-analytcs-one\n",
+      "   bdf491b..622b412  main -> main\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
