--- a/notebook_documetação/estudo-ETL-f1.ipynb
+++ b/notebook_documetação/estudo-ETL-f1.ipynb
@@ -66,29 +66,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def conexao_engine():\n",
+    "    \"\"\"\n",
+    "    Função para criar uma engine sqlalchemy e aws\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        sqlalchemy.create_engine('mysql+pymysql://AWS_DB_USER:AWS_DB_PASS@AWS_DB_HOST:3306/FORMULA1')\n",
+    "        print(\"engine criada com sucesso\")\n",
+    "\n",
+    "    except Exception as err:\n",
+    "        print(\"Falha na criação da engine\")\n",
+    "        print(err)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Base de dados AWS conectada com sucesso!\n"
+      "engine criada com sucesso\n"
      ]
     }
    ],
    "source": [
-    "##Sintaxe:\n",
-    "#engine = sqlalchemy.create_engine( ‘mysql+drive://usuario:senha@ip-servidor:porta/banco-de-dados‘)\n",
-    "\n",
-    "try:\n",
-    "    engine = sqlalchemy.create_engine('mysql+pymysql://admin:mysqladmin1509@database-1.c2hbzw6k9btq.us-east-2.rds.amazonaws.com:3306/FORMULA1')\n",
-    "    print(\"Base de dados AWS conectada com sucesso!\")\n",
-    "\n",
-    "except Exception as err:\n",
-    "\n",
-    "    print(\"Falha na conexão\")\n",
-    "    print(err)\n"
+    "engine = conexao_engine()"
    ]
   },
   {
@@ -105,19 +115,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning: LF will be replaced by CRLF in notebook_documetaÃ§Ã£o/estudo-ETL-f1.ipynb.\n",
+      "The file will have its original line endings in your working directory\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 622b412] criando uma conexao com try e except\n",
-      " 1 file changed, 52 insertions(+), 7 deletions(-)\n"
+      "[main c014e7b] comentario\n",
+      " 1 file changed, 32 insertions(+), 17 deletions(-)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/iuryeng/formula-analytcs-one\n",
+      "   622b412..c014e7b  main -> main\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "comitar_enviar(\"funcao de conexao com engine sqlalchemy e aws\")"
+   ]
   },
   {
    "cell_type": "code",
